--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
+    "@tailwindcss/typography": "^0.5.16",
     "@tsconfig/svelte": "^5.0.4",
     "svelte": "^5.28.1",
     "svelte-check": "^4.1.6",
@@ -21,6 +22,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.8",
     "electron": "^36.4.0",
+    "marked": "^15.0.12",
     "tailwindcss": "^4.1.8"
   }
 }
