--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@tailwindcss/vite": "^4.1.8",
     "electron": "^36.4.0",
     "marked": "^15.0.12",
+    "node-fetch": "^3.3.2",
     "tailwindcss": "^4.1.8"
   }
 }
