refactor: move ui to own folder

--- a/package.json
+++ b/package.json
@@ -1,29 +1,16 @@
 {
   "name": "devnotes",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "version": "1.0.0",
+  "description": "",
+  "main": "main.js",
   "scripts": {
-    "dev": "vite",
-    "app": "electron main.js",
-    "build": "vite build",
-    "preview": "vite preview",
-    "check": "svelte-check --tsconfig ./tsconfig.app.json && tsc -p tsconfig.node.json"
+    "app": "electron .",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "^5.0.3",
-    "@tailwindcss/typography": "^0.5.16",
-    "@tsconfig/svelte": "^5.0.4",
-    "svelte": "^5.28.1",
-    "svelte-check": "^4.1.6",
-    "typescript": "~5.8.3",
-    "vite": "^6.3.5"
-  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.8",
-    "electron": "^36.4.0",
-    "marked": "^15.0.12",
-    "node-fetch": "^3.3.2",
-    "tailwindcss": "^4.1.8"
+    "electron": "^36.4.0"
   }
 }
