--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "scripts": {
     "app": "electron .",
-    "build:win": "electron-builder --win",
+    "build:win": "electron-builder --win --publish never",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
